[package]
name = "csvtolite"
version = "0.1.0"
authors = ["Steve Flanagan <stevemflanagan@gmail.com>"]
edition = "2018"
description="Import/load csv data into a sqlite3 database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.18"
structopt = {version = "0.3.1", feature=["color","termsize","wrap_help"]}
grep-cli = "0.1.3"
regex = "1.3.1"
lazy_static = "1.4.0"
csv = "1.1.1"
scopeguard = "1.0.0"

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]