[package]
name = "csvtolite"
version = "0.1.0"
authors = ["Steve Flanagan <stevemflanagan@gmail.com>"]
edition = "2018"
description="Import/load csv data into a sqlite3 database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]                        
debug = false                            
lto = true                               
codegen-units=1                          
opt-level = 3                            
trustflags = ["-C", "target-cpu=native"] 


[dependencies]
anyhow = "1.0.18"
structopt = {version = "0.3.1", feature=["color","termsize","wrap_help"]}
grep-cli = "0.1.3"
regex = "1.3.1"
lazy_static = "1.4.0"
csv = "1.1.6"
scopeguard = "1.0.0"
log = "0.4.8"
simplelog = "0.10.0"

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]
